# dex

./: .gitignore  EXAMPLE.sh  README.md  commands-manual.sh  pyproject.toml
data/: crawler.db  v0.1.0.db
src/crawler/: app.py  cli.py
src/crawler/classes/: Crawler.py  HttpClient.py
src/crawler/database/: __init__.py  repository.py  schema.py  sqlite.py
src/crawler/providers/: asurascans.py
src/crawler/providers/html/asurascans.com/: browse.html  chapters.html
src/crawler/utils/: base_crawler.py
src/crawler/utils/cleaners/: asurascans.py
src/crawler/utils/cleaners/html/asurascans/: browse.html  chapters.html
src/database/: __init__.py  repository.py  schema.py  sqlite.py
src/scrapper/: app.py  cli.py
src/scrapper/classes/: Crawler.py
src/scrapper/providers/: asurascans.py  visorikigai.py
src/scrapper/providers/html/visorikigai.com/: series.html
