[project]
name = "dex"
version = "0.1.7"
description = "The choosen one, the only one, the supreme manga scrapper :v"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "httpx>=0.28.1",
    "selectolax>=0.4.7",
]

[project.scripts]
dex = "scrapper.cli:dex"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
